--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Divy Ranjan",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.6",
+    "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
+    "joi": "^17.4.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.13"
   }
