--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "Divy Ranjan",
   "license": "ISC",
   "dependencies": {
-    "@mapbox/mapbox-sdk": "^0.13.1",
+    "@maptiler/client": "^1.8.1",
     "cloudinary": "^1.26.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "3.2.0",
