--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@maptiler/client": "^1.8.1",
     "cloudinary": "^1.26.3",
     "connect-flash": "^0.1.1",
-    "connect-mongo": "3.2.0",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "ejs-mate": "^3.0.0",
